Add main menu and settings menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,6 +8,11 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/SettingsMenu/Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/SettingsMenu/Levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Script/Engine.GameMode
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
