Add support for saving console commands

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,6 +12,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/SettingsMenu/Levels/MainMenu.MainMenu
 GameDefaultMap=/Game/SettingsMenu/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Script/Engine.GameMode
+GameInstanceClass=/Game/SettingsMenu/Blueprints/BP_CustomGameInstance.BP_CustomGameInstance_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
